# claude-trader

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  alembic.ini  architecture.md  docker-compose.yml  policy.yaml  prometheus.yml  pyproject.toml
docs/setup/: discord-webhooks.md  vps-deploy.md
docs/superpowers/: HANDOFF-2026-04-25-phase-2-operational.md  HANDOFF-2026-04-25-phase-2-stage-1b.md  HANDOFF_2026-05-10.md  HANDOFF_2026-05-11.md  HANDOFF_2026-05-11_CHECKPOINT_1.md  HANDOFF_2026-05-11_PRODUCTION_PATH.md  HANDOFF_2026-05-12.md  PHASE3_BASE.md  backtest-results-2026-05-11.md
migrations/: env.py
migrations/versions/: 0001_raw_candles.py  0002_phase_0_core_tables.py  0003_features_phase_1_columns.py  0004_raw_orderbook_snapshots.py  0005_raw_funding.py  0006_raw_open_interest.py  0007_raw_long_short_ratio.py  0008_archetype_check.py  0009_raw_candles_partition.py  0010_phase2_execution_and_proposals.py  0011_heartbeat_shifts.py  0012_universe_events.py  0013_strategies.py  0014_regime_classifications.py  0015_portfolio_decisions.py  0016_policy_settings.py  0017_policy_snapshot_columns.py  0018_orders_direction.py
pgbouncer/: pgbouncer.ini  userlist.txt
runtime/: CLAUDE.md  CLAUDE.md.heartbeat-trader.bak  GOALS.md  GOALS.md.heartbeat-trader.bak  SOUL.md  STATE.md
scripts/: daily_cap_check.py  find_decision.py  show_decisions.py  watch_decisions.py  watch_trader.py
src/trading_sandwich/: __init__.py  _async.py  _metrics_port.py  _policy.py  _universe.py  celery_app.py  cli.py  cli_heartbeat.py  cli_settings.py  (+3 more)
tests/: conftest.py
(+343 files in other folders)
