[project]
name = "trading-sandwich"
version = "0.0.1"
description = "24/7 crypto analysis + execution system, MCP-Sandwich pattern"
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "celery[redis]>=5.4",
  "redis>=5.0",
  "ccxt>=4.3",
  "pandas>=2.2",
  "pandas-ta>=0.3.14b",
  "numpy>=1.26",
  "structlog>=24.1",
  "typer>=0.12",
  "prometheus-client>=0.20",
  "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "testcontainers[postgres,redis]>=4.5",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML",
]

[project.scripts]
myapp = "trading_sandwich.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_sandwich"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "integration: tests requiring docker (testcontainers)",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
